[package]
name = "macos_keyboard_remapper"
version = "0.1.0"
edition = "2021"
description = "remap keys from the US QWERTY layout to Dvorak layout on macOS"
license = "MIT"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
