[package]
name = "macos_keyboard_remapper"
version = "0.2.3"
edition = "2024"
description = "remap keys from the US QWERTY layout to Dvorak layout on macOS"
license = "MIT"
repository = "https://github.com/misha-antonenko/macos_keyboard_remapper"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
core-graphics = "0.24"
core-foundation = "0.10"